# AAA_Ton_Gift_Scanner

./: .env.example  .gitignore  CUsersPC.sshbaryga_key  CUsersPC.sshbaryga_key.pub  DEPLOY.md  QUICKSTART.md  README.md  README_MINIAPP.md  check_db.py  db_backup.sql  docker-compose.yml  main.py  market_events.csv  market_events_dump.sql  market_events_full.sql  pyproject.toml  run_api.py  start-miniapp-test.bat  test-webapp.html  test_alert_engine.py  test_analytics.py  test_collectors.py  test_inserts.sql  test_tg_stats.py
.claude/: settings.local.json
scripts/: backfill.py  init_db.sql  migrate_gift_history.sql  telegram_auth.py
src/: __init__.py  config.py
src/api/: app.py  auth.py  models.py
src/api/routes/: analytics.py  analytics.py.bak  deals.py  deals.py.bak  (+3 more)
src/bot/: keyboards.py  main.py  whitelist.py
src/collectors/: __init__.py  fragment.py  swift_gifts.py  ton_api.py  tonnel.py  tonnel_playwright.py
src/core/: alert_engine.py  analytics.py  models.py
src/services/: __init__.py  fragment_metadata.py  getgems_api.py  giftasset_api.py  giftasset_cache.py  mrkt_api.py  osint.py  scanner_service.py  telegram_client.py  telegram_stats.py  ton_api.py  ton_realtime.py  wallet_resolver.py
src/storage/: __init__.py  db_pool.py  gift_history.py  postgres.py  redis_client.py
src/utils/: logger.py
src/workers/: __init__.py  gift_collector.py
webapp/: .env.example  .env.production  package-lock.json  package.json  vercel.json  vite.config.ts
webapp/src/: App.css  App.tsx  index.css  main.tsx  telegram-webapp.d.ts  telegram.ts  websocket.ts
(+15 files in other folders)
