[tool.poetry]
name = "aaa-ton-gifts-scanner"
version = "0.1.0"
description = "High-performance TON Gifts market scanner with real-time alerts"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
redis = {extras = ["hiredis"], version = "^5.0.1"}
aiohttp = "^3.9.1"
curl-cffi = "^0.6.0"
tonnelmp = "^1.2"
fastapi = "^0.108.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
aiogram = "^3.3.0"
python-dotenv = "^1.0.0"
numpy = "^1.26.2"
playwright = "^1.40.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.12.1"
ruff = "^0.1.8"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
